--- a/BlazorApp.Client/Client/Pages/Counter.razor
+++ b/BlazorApp.Client/Client/Pages/Counter.razor
@@ -1,18 +1,36 @@
 ﻿@page "/counter"
 
-<PageTitle>Counter</PageTitle>
+<PageTitle>Material Design Card</PageTitle>
 
-<h1>Counter</h1>
+<h1>Card</h1>
 
-<p role="status">Current count: @currentCount</p>
+<style>
+</style>
+@*<MatCard class="demo-mat-card">
+    <MatCardContent>
+        <MatCardMedia Wide="false" Style="height:200px" ImageUrl="https://material-components.github.io/material-components-web-catalog/static/media/photos/3x2/2.jpg"></MatCardMedia>
+        <div class="demo-mat-card-content">
+            <MatHeadline6 class="demo-mat-card-clean-margin">
+                Our Changing Planet
+            </MatHeadline6>
+            <MatSubtitle2 class="demo-mat-card-clean-margin">
+                by Kurt Wagner
+            </MatSubtitle2>
+        </div>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+        <MatBody2 class="demo-mat-card-content demo-mat-card-clean-margin">
+            Visit ten places on our planet that are undergoing the biggest changes today.
+        </MatBody2>
+    </MatCardContent>
+    <MatCardActions>
+        <MatCardActionButtons>
+            <MatButton>Read</MatButton>
+            <MatButton>Bookmark</MatButton>
+        </MatCardActionButtons>
 
-@code {
-    private int currentCount = 0;
-
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
-}
+        <MatCardActionIcons>
+            <MatIconButton Icon="@MatIconNames.Favorite"></MatIconButton>
+            <MatIconButton Icon="@MatIconNames.Dashboard"></MatIconButton>
+        </MatCardActionIcons>
+    </MatCardActions>
+</MatCard>*@
