--- a/BlazorApp.Client/Client/Pages/FetchData.razor
+++ b/BlazorApp.Client/Client/Pages/FetchData.razor
@@ -2,43 +2,54 @@
 @using BlazorApp.Client.Shared
 @inject HttpClient Http
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Add Employee Details</PageTitle>
 
-<h1>Weather forecast</h1>
+<h1>Add Employee</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+@*<p>This page is developed using MatBlazor components.</p>*@
+<div></div>
+<div>Date Of Birth</div>
+ <p>
+        <MatDatePicker @bind-Value="@Date1"></MatDatePicker>
+ </p>
+    <MatButton OnClick="@(_ => { Date1 = DateTime.Now; })">
+        Set
+    </MatButton>
+    <MatButton OnClick="@(_ => { Date1 = null; })">
+            Empty
+    </MatButton>
+    <br /><br />
+        @*<span>@(Date1.HasValue ? Date1.Value.ToLocalTime().ToString() : "")</span>*@
+<p>Gender:</p>
+<MatRadioGroup @bind-Value="@gender" Items="@(Enum.GetValues(typeof(Gender)).Cast<Gender>())">
+</MatRadioGroup>
+<br />
+<p>Education:</p>
+<MatSelect Label="Select Degree" @bind-Value="value1">
+    <MatOptionString></MatOptionString>
+    <MatOptionString Value="engg">B.E/B.Tech</MatOptionString>
+    <MatOptionString Value="master">Masters Degree</MatOptionString>
+    <MatOptionString Value="bca">BCA</MatOptionString>
+    <MatOptionString Value="msc">MSC</MatOptionString>
+</MatSelect>
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
 
 @code {
+    public static string value1;
+    public DateTime? Date1 { get; set; } = DateTime.Now.AddDays(-10);
     private WeatherForecast[]? forecasts;
+    protected string Val1;
+    List<string> list = new List<string>();
+
+    Gender gender;
+
+    enum Gender
+    {
+        None,
+        Male,
+        Female,
+        Other
+    }
 
     protected override async Task OnInitializedAsync()
     {
