--- a/BlazorApp.Client/Client/Pages/Index.razor
+++ b/BlazorApp.Client/Client/Pages/Index.razor
@@ -1,17 +1,56 @@
 ﻿@page "/"
 @using BlazorApp.Client.Shared 
 @using Syncfusion.Blazor.Grids
+@using MatBlazor;
 
-<SfGrid DataSource="@Employees">
-    <GridColumns>
-        <GridColumn Field=@nameof(Employee.EmployeeId) HeaderText="Employee ID"></GridColumn>
-        <GridColumn Field=@nameof(Employee.FirstName) HeaderText="First Name"></GridColumn>
-        <GridColumn Field=@nameof(Employee.LastName) HeaderText="Last Name"></GridColumn>
-        <GridColumn Field=@nameof(Employee.Email) HeaderText="Employee Email"></GridColumn>
-    </GridColumns>
-</SfGrid>
+@if (Employees == null)
+{
+    <p><em>Loading...</em></p>
+}
+else
+{
+    <MatTable Items="@Employees" class="table mat-elevation-z5" AllowSelection="true" SelectionChanged="SelectionChangedEvent">
+        <MatTableHeader>
+                <th>ID</th>
+                <th>Employee Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Address</th>
+        </MatTableHeader>
+        <MatTableRow>
+
+            <td>@context.EmployeeId</td>
+            <td>@context.FirstName @context.LastName</td>
+            <td>@context.Email</td>
+            <td>@context.Phone</td>
+            <td>@context.Address</td>
+            
+        </MatTableRow>
+    </MatTable>
+    <p>@_currentSelectedTask</p>
+    <p>@_data</p>
+}
 
 @code {
+    private string _currentSelectedTask;
+    private string _data;
+    public void SelectionChangedEvent(object row)
+    {
+        if (row == null)
+        {
+            _currentSelectedTask = "";
+        }
+        else
+        {
+            _currentSelectedTask = string.Format(" Following Employee ID: {0}",
+            ((Employee)row).EmployeeId);
+            
+            _data = string.Format("Data: DateOfBirth:{0}   Gender:{1}",
+            ((Employee)row).DateOfBirth, ((Employee)row).Gender);
+        }
+
+        this.StateHasChanged();
+    }
     public List<Employee> Employees { get; set; }
 
     protected override void OnInitialized()
@@ -26,10 +65,12 @@
                 EmployeeId = 1,
                 FirstName = "John",
                 LastName = "Hastings",
-                Email = "john@pragimtech.com",
-                DateOfBrith = new DateTime(1980, 10, 5),
+                Email = "David@DropBox.com",
+                Phone = "+1 202-918-2132",
+                Address = "221b Baker Street,albuquerque,USA ",
+                DateOfBirth = new DateTime(1980, 10, 5),
                 Gender = Gender.Male,
-                Department = new Department { DepartmentId = 1, DepartmentName = "IT" },
+                DepartmentId = 1,
                 PhotoPath = "images/john.png"
             };
 
@@ -38,10 +79,12 @@
                 EmployeeId = 2,
                 FirstName = "Sam",
                 LastName = "Galloway",
-                Email = "sam@pragimtech.com",
-                DateOfBrith = new DateTime(1981, 12, 22),
+                Email = "Sam@DropBox.com",
+                DateOfBirth = new DateTime(1981, 12, 22),
+                Phone = "+1 578-456-695",
+                Address = "2218 Kurtis Street, Suite 828, 95726, New Abel, Alaska,USA",
                 Gender = Gender.Male,
-                Department = new Department { DepartmentId = 2, DepartmentName = "HR" },
+                DepartmentId = 2,
                 PhotoPath = "images/sam.jpg"
             };
 
@@ -50,25 +93,42 @@
                 EmployeeId = 3,
                 FirstName = "Mary",
                 LastName = "Smith",
-                Email = "mary@pragimtech.com",
-                DateOfBrith = new DateTime(1979, 11, 11),
+                Email = "mary@DropBox.com",
+                DateOfBirth = new DateTime(1979, 11, 11),
+                Phone = "+1 578-512-635",
+                Address = "5461 Zelma Light, Suite 786, 51132, North Gavin, Connecticut, USA",
                 Gender = Gender.Female,
-                Department = new Department { DepartmentId = 1, DepartmentName = "IT" },
+                DepartmentId = 1,
                 PhotoPath = "images/mary.png"
             };
 
         Employee e4 = new Employee
             {
-                EmployeeId = 3,
+                EmployeeId = 4,
                 FirstName = "Sara",
                 LastName = "Longway",
-                Email = "sara@pragimtech.com",
-                DateOfBrith = new DateTime(1982, 9, 23),
+                Email = "sara@DropBox.com",
+                DateOfBirth = new DateTime(1982, 9, 23),
+                Phone = "+1 534-126-667",
+                Address = "076 Grayce Squares, Apt. 090, 78353, Gulgowskiside, Tennessee,USA ",
                 Gender = Gender.Female,
-                Department = new Department { DepartmentId = 3, DepartmentName = "Payroll" },
+                DepartmentId = 3,
                 PhotoPath = "images/sara.png"
             };
+            Employee e5 = new Employee
+            {
+                EmployeeId = 5,
+                FirstName = "Annie",
+                LastName = "Leonheart",
+                Email = "AnnieLArmin@DropBox.com",
+                DateOfBirth = new DateTime(1982, 9, 23),
+                Phone = "+1 534-126-667",
+                Address = "076 Grayce Squares, Apt. 090, 78353, Gulgowskiside, Tennessee,USA ",
+                Gender = Gender.Female,
+                DepartmentId = 3,
+                PhotoPath = "images/sara5.png"
+            };
 
-        return new List<Employee> { e1, e2, e3, e4 };
+        return new List<Employee> { e1, e2, e3, e4,e5 };
     }
 }
